applications/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jangsu-test-2
  namespace: backend
  labels:
    app: jangsu-test-2
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: jangsu-test-2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: jangsu-test-2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k3s-worker
      containers:
      - name: jangsu-container-2
        image: yunjangsu/test:v11.6
        volumeMounts:
        - name: jspd
          mountPath: /opt/data/
        command:
        - sh
        - -c
        - |
          JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails -XX:+PrintFlagsFinal"
          java $JAVA_OPTS -jar /opt/app/jangsu-0.0.1-SNAPSHOT.jar
        resources: 
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: jspd
        persistentVolumeClaim:
          claimName: pvc-localtest
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
