applications/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":"2025-07-23T07:05:04Z","labels":{"app":"jangsu-test-2"},"name":"tomcat-svc-1","namespace":"default","resourceVersion":"33220","uid":"dc4a8236-2e4c-4662-93f6-80e43276ff13"},"spec":{"clusterIP":"10.43.42.8","clusterIPs":["10.43.42.8"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"jangsu-test-2 [...]
  creationTimestamp: "2025-07-23T07:07:44Z"
  labels:
    app: jangsu-test-2
  name: tomcat-svc-1
  namespace: backend
  resourceVersion: "33297"
  uid: 0e11753c-4836-4602-8b9e-98859cc172df
spec:
  clusterIP: 10.43.42.8
  clusterIPs:
  - 10.43.42.8
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: jangsu-test-2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
